tests/ui/fail/fn-missing-impl-01.stderr
error: must have default implementation
 --> tests/ui/fail/fn-missing-impl-01.rs:5:5
  |
5 |     fn foo();
  |     ^^^^^^^^^
